--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
 
 
     /* Colors */
+    /* hex of background color #23272f */
     --nav-topbar-background-color: rgb(35, 39, 47);
     --nav-sidebar-background-color: rgb(18, 28, 95);
     --nav-link-hover-color: rgb(41, 119, 202);
