Added lazy loading for parallax images

--- a/style.css
+++ b/style.css
@@ -801,15 +801,17 @@ section.projects {
 
 
 .parallax-container-1 {
-    background-image: url('./images/ucsd_lib2.png');
+    /* background-image: url('./images/ucsd_lib2.png'); */
     background-position: 50% 5vh;
 }
 
 
 .parallax-container-2 {
-    background-image: url('./images/matrix.jpg');
+    /* background-image: url('./images/matrix.jpg'); */
     filter: brightness(0.85);
 }
+
+
 
 
 img.text-width {
