--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: normal;
-    font-display: swap;
+    /* font-display: swap; */
 }
 
 
@@ -25,7 +25,7 @@
     font-weight: 100 900; 
     font-stretch: 75% 100%;
     font-style: italic;
-    font-display: swap;
+    /* font-display: swap; */
 }
 
 
