--- a/src/css/style.css
+++ b/src/css/style.css
@@ -801,13 +801,13 @@ section.projects {
 
 
 .parallax-container-1 {
-    /* background-image: url('./images/ucsd_lib2.png'); */
+    background-image: url('../images/ucsd_lib2.png');
     background-position: 50% 5vh;
 }
 
 
 .parallax-container-2 {
-    /* background-image: url('./images/matrix.jpg'); */
+    background-image: url('../images/matrix.jpg');
     filter: brightness(0.85);
 }
 
