--- a/src/css/style.css
+++ b/src/css/style.css
@@ -514,24 +514,27 @@ nav.sidebar {
     position: fixed; 
     top: var(--nav-topbar-height-offset);
     right: 0;
+    text-align: left;
     /* padding: 20px; */
     /* background-color: #20232a; */
-    background-color: var(--nav-sidebar-background-color);
-    text-align: center;
-    /* border-left: 1px solid #8a2121; */
+    /* background-color: var(--nav-sidebar-background-color); */
+    /* border-left: 1px solid rgba(226, 226, 227, 0.2); */
     /* box-shadow: -2px 0 5px 0 rgba(0, 0, 0, 0.1); */
 }
 
 
 nav.sidebar h6 {
+    text-align: left;
     color: white;
-    font-size: 0.88rem;
+    font-size: 0.86rem;
     font-weight: bold;
-    /* letter-spacing: 0.02rem; */
+    letter-spacing: 0.04rem;
     text-transform: uppercase;
     margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 25px;
+    /* margin-left: 15px; */
+    /* margin-right: 15px; */
  }
 
 
@@ -545,15 +548,15 @@ nav.sidebar li {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 25px;
     transition: background-color var(--nav-link-transition-duration) var(--transition-style) var(--transition-delay);  
 }
 
 
 nav.sidebar a {
-    text-decoration: none;
     color: white; 
-    font-size: 0.88rem;
+    text-decoration: none;
+    font-size: 0.86rem;
     letter-spacing: 0.03rem;
  }
 
