Improved Technical Skills section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,7 +134,8 @@ section li {
 }
 
 
-section ol ul {
+section ol ul,
+section ul ul {
     margin-top: 1%;
     margin-bottom: 1%;
     margin-left: 5%;
