--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1118,10 +1118,11 @@ footer {
     }
 
 
-    section ol ul {
+    section ol ul,
+    section ul ul {
         margin-top: 3%;
         margin-bottom: 3%;
-        margin-left: 7%;
+        margin-left: 6%;
     }
     
     
