Added a text shadow to hero h1

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,6 +130,11 @@ body {
 }
 
 
+.hero h1 {
+    text-shadow: 0 0 2.0rem rgba(0, 0, 0, 0.4);
+}
+
+
 
 /* width, height, padding, border, and margins should use % */
 /* ***************************************************************************** */
