--- a/src/css/style.css
+++ b/src/css/style.css
@@ -305,6 +305,7 @@ h1:hover {
 
 
 h2 {
+    scroll-margin-top: 5vh;
     text-align: left;
     font-size: 2.6rem;
     margin-bottom: 5%;
@@ -558,6 +559,14 @@ nav.sidebar {
     /* background-color: var(--nav-sidebar-background-color); */
     /* border-left: 1px solid rgba(226, 226, 227, 0.2); */
     /* box-shadow: -2px 0 5px 0 rgba(0, 0, 0, 0.1); */
+    opacity: 1;
+    transition: opacity 0.7s var(--transition-style) var(--transition-delay);  
+}
+
+
+nav.sidebar.hidden {
+    opacity: 0;
+    pointer-events: none;
 }
 
 
@@ -569,8 +578,9 @@ nav.sidebar h6 {
     letter-spacing: 0.04rem;
     text-transform: uppercase;
     margin-top: 15px;
+    margin-bottom: 12px;
     padding-left: 10px;
-    padding-right: 25px;
+    /* padding-right: 25px; */
     /* margin-left: 15px; */
     /* margin-right: 15px; */
  }
@@ -578,7 +588,12 @@ nav.sidebar h6 {
 
 nav.sidebar ul {
     list-style: none;
-    margin-top: 12px;
+}
+
+
+nav.sidebar ul ul {
+    margin-top: 10px;
+    margin-left: 12px;
 }
 
 
@@ -586,8 +601,22 @@ nav.sidebar li {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
-    padding-right: 25px;
+    padding-right: 14px;
+    /* margin-right: 10px; */
+    border-radius: 5px;
     transition: background-color var(--nav-link-transition-duration) var(--transition-style) var(--transition-delay);  
+}
+
+
+nav.sidebar li li {
+    pointer-events: all;
+}
+
+
+nav.sidebar ul li:has(ul) {
+    padding-bottom: 0px;
+    padding-right: 0px;
+    pointer-events: none;
 }
 
 
@@ -599,13 +628,13 @@ nav.sidebar a {
  }
 
 
-nav.sidebar li:hover {
+nav.sidebar li:not(:has(ul)):hover {
     background-color: var(--nav-link-sidebar-hover-color);
-    cursor: pointer; 
+    cursor: pointer;
 }
 
 
-nav.sidebar li.active {
+nav.sidebar li:not(:has(ul)).active {
     background-color: var(--nav-link-sidebar-hover-color);
 }
 
