--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,7 +604,7 @@ nav.sidebar li {
     padding-right: 14px;
     /* margin-right: 10px; */
     border-radius: 5px;
-    transition: background-color var(--nav-link-transition-duration) var(--transition-style) var(--transition-delay);  
+    transition: background-color 0.4s var(--transition-style) var(--transition-delay);  
 }
 
 
