--- a/src/css/style.css
+++ b/src/css/style.css
@@ -610,14 +610,14 @@ nav.sidebar ul {
 
 
 nav.sidebar ul ul {
-    margin-top: 10px;
+    padding-top: 1px;
     margin-left: 12px;
 }
 
 
 nav.sidebar li {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     padding-left: 10px;
     padding-right: 10px;
     /* margin-right: 10px; */
@@ -639,6 +639,8 @@ nav.sidebar ul li:has(ul) {
 
 
 nav.sidebar a {
+    display: block;
+    padding: 10px 0;
     color: white; 
     text-decoration: none;
     font-size: 0.88rem;
