Revised sidebar margins and padding

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -616,17 +616,13 @@ nav.sidebar ul {
 
 
 nav.sidebar ul ul {
-    padding-top: 1px;
-    margin-left: 12px;
+    /* padding-top: 1px; */
+    margin-left: 20px;
 }
 
 
 nav.sidebar li {
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 10px;
-    padding-right: 10px;
-    /* margin-right: 10px; */
+    margin: 2px 0;
     border-radius: 5px;
     transition: background-color 0.4s var(--transition-style) var(--transition-delay);  
 }
@@ -638,8 +634,8 @@ nav.sidebar li li {
 
 
 nav.sidebar ul li:has(ul) {
-    padding-bottom: 0px;
-    padding-right: 0px;
+    /* padding-bottom: 0px; */
+    /* padding-right: 0px; */
     pointer-events: none;
 }
 
@@ -647,6 +643,7 @@ nav.sidebar ul li:has(ul) {
 nav.sidebar a {
     display: block;
     padding: 10px 0;
+    padding-left: 10px;
     color: white; 
     text-decoration: none;
     font-size: 0.88rem;
